Resolve alignment in HomePage[#8]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -129,7 +129,7 @@ footer {
 }
 
 .w3-section.w3-padding-top.w3-large {
-  padding-left: 122px;
+  padding-left: 115px;
 }
 
 .w3-sidenav.w3-black {
